<!--
  ~ Planet's Position
  ~ A program to calculate the position of the planets in the night sky based
  ~ on a given location on Earth.
  ~ Copyright (c) 2019 Tim Gaddis
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="app_name">Planet\'s Position</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Action Bar/Toolbar -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_date">Date</string>
    <string name="action_cal">Calendar</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_gps">GPS</string>
    <string name="action_map">Map</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_live">Real Time Position</string>
    <!-- Navigation Drawer -->
    <string name="nav_solar_eclipse">Solar Eclipses</string>
    <string name="nav_lunar_eclipse">Lunar Eclipses</string>
    <string name="nav_lunar_occultion">Lunar Occultations</string>
    <string name="nav_sky_position">Sky Position</string>
    <string name="nav_whats_up">Rise / Set</string>
    <string name="nav_location">Location</string>
    <!-- User Location -->
    <string name="loc_down">GPS</string>
    <string name="loc_lat">Latitude</string>
    <string name="loc_lng">Longitude</string>
    <string name="loc_ele">Elevation</string>
    <string name="loc_gmt">GMT offset</string>
    <string name="loc_timezone">Timezone</string>
    <string name="loc_user_city">Select a Country, State, and City.</string>
    <string name="loc_country">Country</string>
    <string name="loc_state">State / Province</string>
    <string name="loc_city">City</string>
    <string name="loc_tz_title">Select a timezone.</string>
    <string name="loc_edit_fields">Edit Fields</string>
    <string name="loc_select_city">Select City</string>
    <!-- Planet data -->
    <string name="data_ra">Right Ascension</string>
    <string name="data_dec">Declination</string>
    <string name="data_az">Azimuth</string>
    <string name="data_alt">Altitude</string>
    <string name="data_dis">Distance</string>
    <string name="data_mag">Magnitude</string>
    <string name="data_set">Set Time</string>
    <string name="data_rise">Rise Time</string>
    <string name="data_rising">Rising</string>
    <string name="data_setting">Setting</string>
    <string name="data_all">View All</string>
    <string name="data_transit">Meridian Transit</string>
    <string name="below_hor">Object below horizon</string>
    <!-- Solar/Lunar Eclipse -->
    <string name="ecl_sunrise">Sunrise</string>
    <string name="ecl_sunset">Sunset</string>
    <string name="ecl_moonrise">Moon Rise</string>
    <string name="ecl_moonset">Moon Set</string>
    <string name="ecl_times">Eclipse Times</string>
    <string name="ecl_data">Eclipse Data</string>
    <string name="ecl_local">(Local Time)</string>
    <string name="ecl_universal">(Universal Time)</string>
    <string name="ecl_se_start">Eclipse Start</string>
    <string name="ecl_se_tstart">Totality Start</string>
    <string name="ecl_se_max">Max Eclipse</string>
    <string name="ecl_se_tend">Totality End</string>
    <string name="ecl_se_end">Eclipse End</string>
    <string name="ecl_se_sun">Sun Position At Max Eclipse</string>
    <string name="ecl_local_type">Local Type:</string>
    <string name="ecl_se_cover">Sun Coverage</string>
    <string name="ecl_se_saros">Saros Number</string>
    <string name="ecl_se_sarosm">Saros Member</string>
    <string name="ecl_no">Eclipse not visible locally</string>
    <string name="ecl_le_pstart">Partial Start</string>
    <string name="ecl_le_pend">Partial End</string>
    <string name="ecl_le_moon">Moon Position At Max Eclipse</string>
    <string name="ecl_le_pmag">Penumbral\nMagnitude</string>
    <string name="ecl_le_umag">Umbral\nMagnitude</string>
    <string name="local_desc">Eclipse Local</string>
    <string name="type_desc">Eclipse Type</string>
    <string name="eclipse_dialog">Calculating eclipses,\nplease wait…</string>
    <!-- Lunar Occultation -->
    <string name="lo_times">Occultation Times</string>
    <string name="lo_data">Occultation Data</string>
    <string name="lo_start">Occultation Start</string>
    <string name="lo_end">Occultation End</string>
    <string name="lo_max">Occultation Max</string>
    <string name="lo_moon">Moon Position</string>
    <string name="lo_no">Occultation not visible locally</string>
    <!-- Other strings -->
    <string name="alert_string">There is no location data saved.
        You can either download the data using GPS or manually enter the data.</string>
    <string name="permission_reason">This permission is to save your location for use
        in calculating local planetary events.</string>
    <string name="alert_manual">Manual</string>
    <string name="copy_dialog">Copying files.\nPlease wait…</string>
    <string name="wup_desc">Planet Symbol</string>
    <string name="title_activity_solar_eclipse_map">Solar Eclipse Map</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="location_required">Settings->Location needs to be enabled to fetch the location.</string>
    <string name="gps_string">Searching for GPS location…</string>
</resources>
