<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_solar_eclipse" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_lunar_eclipse" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_lunar_occultion" />
        <item
            android:id="@+id/nav_slideshow2"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_sky_position" />
        <item
            android:id="@+id/nav_manage2"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_whats_up" />
    </group>

    <group
        android:id="@+id/menu_extra"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_location" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_send2"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/action_about" />
    </group>

</menu>
