<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:planets="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_gps"
        android:icon="@drawable/ic_action_location"
        android:orderInCategory="100"
        android:title="@string/action_gps"
        planets:showAsAction="always|withText" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="101"
        android:title="@string/action_edit"
        planets:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:orderInCategory="102"
        android:title="@string/action_save"
        android:visible="false"
        planets:showAsAction="ifRoom|withText" />
</menu>