<!--
  ~ Planet's Position
  ~ A program to calculate the position of the planets in the night sky based
  ~ on a given location on Earth.
  ~ Copyright (c) 2020 Tim Gaddis
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/data_card_pad">

    <TextView
        android:id="@+id/textCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loc_country"
        android:textColor="@color/alt_text_color"
        android:textSize="@dimen/label_text" />

    <Spinner
        android:id="@+id/spinnerCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/data_card_pad" />

    <TextView
        android:id="@+id/textState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loc_state"
        android:textColor="@color/alt_text_color"
        android:textSize="@dimen/label_text" />

    <Spinner
        android:id="@+id/spinnerState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/data_card_pad"
        android:textColor="@color/text_color"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loc_city"
        android:textColor="@color/alt_text_color"
        android:textSize="@dimen/label_text" />

    <Spinner
        android:id="@+id/spinnerCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/data_card_pad"
        android:textColor="@color/text_color"
        android:visibility="invisible" />

</LinearLayout>
