<!--
  ~ Planet's Position
  ~ A program to calculate the position of the planets in the night sky based
  ~ on a given location on Earth.
  ~ Copyright (c) 2016 Tim Gaddis
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/data_card"
    android:elevation="5dp"
    card_view:cardBackgroundColor="@color/cardview_dark_background"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="5dp">

    <LinearLayout
        android:id="@+id/user_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/view00"
            android:layout_width="match_parent"
            android:layout_height="@dimen/data_card_pad" />

        <TextView
            android:id="@+id/text01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/loc_lat"
            android:textColor="@color/alt_text_color"
            android:textSize="@dimen/label_text" />

        <TextView
            android:id="@+id/newLatLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/text_color"
            android:textSize="@dimen/label_text" />

        <View
            android:id="@+id/view01"
            android:layout_width="match_parent"
            android:layout_height="@dimen/data_card_pad" />

        <TextView
            android:id="@+id/text02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/loc_lng"
            android:textColor="@color/alt_text_color"
            android:textSize="@dimen/label_text" />

        <TextView
            android:id="@+id/newLongText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/text_color"
            android:textSize="@dimen/label_text" />

        <View
            android:id="@+id/view02"
            android:layout_width="match_parent"
            android:layout_height="@dimen/data_card_pad" />

        <TextView
            android:id="@+id/text03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/loc_ele"
            android:textColor="@color/alt_text_color"
            android:textSize="@dimen/label_text" />

        <TextView
            android:id="@+id/newElevationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/text_color"
            android:textSize="@dimen/label_text" />

        <View
            android:id="@+id/view03"
            android:layout_width="match_parent"
            android:layout_height="@dimen/data_card_pad" />

        <TextView
            android:id="@+id/text04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/loc_gmt"
            android:textColor="@color/alt_text_color"
            android:textSize="@dimen/label_text" />

        <TextView
            android:id="@+id/newGMTOffsetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/text_color"
            android:textSize="@dimen/label_text" />

        <View
            android:id="@+id/view04"
            android:layout_width="match_parent"
            android:layout_height="@dimen/data_card_pad" />

        <TextView
            android:id="@+id/locEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/loc_edit"
            android:visibility="invisible" />
    </LinearLayout>

</android.support.v7.widget.CardView>
