<?xml version="1.0" encoding="utf-8"?><!--
  ~ Planet's Position
  ~ A program to calculate the position of the planets in the night sky based
  ~ on a given location on Earth.
  ~ Copyright (c) 2018 Tim Gaddis
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/user_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/main_back"
        android:orientation="vertical"
        android:padding="@dimen/data_card_pad">

        <TextView
            android:id="@+id/newLat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/data_card_pad"
            android:text="@string/loc_lat"
            android:textColor="@color/alt_text_color"
            android:textSize="@dimen/label_text" />

        <TextView
            android:id="@+id/newLatText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/data_card_pad"
            android:textColor="@color/text_color"
            android:textSize="@dimen/label_text" />

        <TextView
            android:id="@+id/newLong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/loc_lng"
            android:textColor="@color/alt_text_color"
            android:textSize="@dimen/label_text" />

        <TextView
            android:id="@+id/newLongText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/data_card_pad"
            android:textColor="@color/text_color"
            android:textSize="@dimen/label_text" />

        <TextView
            android:id="@+id/newElevation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/loc_ele"
            android:textColor="@color/alt_text_color"
            android:textSize="@dimen/label_text" />

        <TextView
            android:id="@+id/newElevationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/data_card_pad"
            android:textColor="@color/text_color"
            android:textSize="@dimen/label_text" />

        <TextView
            android:id="@+id/newGMTOffset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/loc_gmt"
            android:textColor="@color/alt_text_color"
            android:textSize="@dimen/label_text" />

        <TextView
            android:id="@+id/newGMTOffsetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/data_card_pad"
            android:textColor="@color/text_color"
            android:textSize="@dimen/label_text" />

        <TextView
            android:id="@+id/locEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/loc_edit"
            android:visibility="invisible" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
